Updated boilerplate with auth0
